<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Knapsack Problem</string>
    <string name="level">Level: </string>
    <string name="level_num">1</string>
    <string name="value">Value: </string>
    <string name="value_num">0</string>
    <string name="reset">Reset</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="done">Submit</string>
    <string name="bin_packing">Bin Packing</string>
    <string name="start">Start</string>
    <string name="high_scores">High Scores</string>
    <string name="quit">Quit</string>
	<string name="ready">ready?</string>
	<string name="level1">Baby Packer</string>
	<string name="level2">Pack Rat</string>
	<string name="level3">Experienced Packer</string>
	<string name="level4">Packing Connoisseur</string>
	<string name="level5">Pack Master</string>
	<string name="yes">yes!</string>
	<string name="level1r">--</string>
	<string name="level2r">--</string>
	<string name="level3r">--</string>
	<string name="level4r">--</string>
	<string name="level5r">--</string>
	

</resources>