<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">

	<LinearLayout android:id="@+id/linearLayout2"
		android:layout_width="match_parent" android:layout_height="wrap_content">

		<TextView android:id="@+id/textView1" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/level"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<TextView android:id="@+id/textView2" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/level_num"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<TextView android:id="@+id/textView3" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/value"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<TextView android:id="@+id/textView4" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/value_num"
			android:textAppearance="?android:attr/textAppearanceMedium" />

	</LinearLayout>

	<LinearLayout android:id="@+id/linearLayout3"
		android:layout_width="match_parent" android:layout_height="500dp">

		<edu.upenn.cis350.algoviz.BinPackingView
			android:id="@+id/binview" android:layout_width="match_parent"
			android:layout_height="450dp" />

	</LinearLayout>

	<LinearLayout android:id="@+id/linearLayout1"
		android:layout_width="match_parent" android:layout_height="wrap_content">

		<Button android:id="@+id/button1" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:onClick="onResetClick"
			android:text="@string/reset" />

		<Button android:id="@+id/button2" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:onClick="onDoneClick"
			android:text="@string/done" />

		<Button android:id="@+id/button4" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:onClick="onBackClick"
			android:text="@string/previous" />

		<Button android:id="@+id/button3" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:onClick="onNextLevelClick"
			android:text="@string/next" />

	</LinearLayout>

</LinearLayout>